--- a/CvLocateSourceCode/Website/CvLocate.Website/index.html
+++ b/CvLocateSourceCode/Website/CvLocate.Website/index.html
@@ -9,7 +9,7 @@
             display: none!important;
         }
     </style>
-    <title data-ng-bind="title">ChevisBusiness</title>
+    <title data-ng-bind="title">CvLocate</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
@@ -41,7 +41,7 @@
         <div id="splash-page" data-ng-show="false">
             <div class="page-splash">
                 <div class="page-splash-message">
-                    ChevisBusiness Angular
+                    CvLocate Angular
                 </div>
                 <div class="progress progress-striped active page-progress-bar">
                     <div class="bar"></div>
@@ -104,7 +104,7 @@
     <script src="app/login/signUpStep1.drv/signUpStep1.drv.js"></script>
     <script src="app/login/signUpStep2.drv/signUpStep2.drv.js"></script>
     <script src="app/login/signIn.drv/signIn.drv.js"></script>
-
+    <script src="app/common/resources.js"></script>
     <!-- authentication Modules -->
     <script src="app/services/authentication.js"></script>
 
